--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Kelly Lee</h1>
-                    <p>Junior Software Developer</p>
+                    <p>Frontend Developer</p>
                     <div class="button"><a href="#about-me">About me</a></div>
                 </div>
                 <div class="socials">
