--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             <h2>Projects</h2>
             <div class="project-container">
                 <div class="project-card">
-                    <img class="project-image" src="src/images/Project1.png" alt="Project one image"/>
+                    <img class="project-image" src="src/images/Pokemon project.png" alt="Project one image"/>
                     <h3>Project One</h3>
-                    <p class="subtext"> Currency Converter </p>
+                    <p class="subtext"> Pokemon React </p>
                     <hr/>
-                    <p class="subtext"><a class="project-link" href="https://leekkelly.github.io/Currency-Converter/">View here</a></p>
+                    <p class="subtext"><a class="project-link" href="https://pokemonpicker-react.netlify.app">View here</a></p>
                 </div>
                 <div class="project-card">
                     <img class="project-image" src="src/images/Project2.png" alt="Project two image"/>
