--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                     <p class="subtext"><a class="project-link" href="https://pokemonpicker-react.netlify.app">View here</a></p>
                 </div>
                 <div class="project-card">
-                    <img class="project-image" src="src/images/Project2.png" alt="Project two image"/>
+                    <img class="project-image" src="src/images/Project2.jpg" alt="Project two image"/>
                     <h3>Project Two</h3>
-                    <p class="subtext"> React Simple Player Search </p>
+                    <p class="subtext"> TV Installation Service Demo </p>
                     <hr/>
-                    <p class="subtext"><a class="project-link" href="https://football-player-react.onrender.com">View here</a></p>
+                    <p class="subtext"><a class="project-link" href="https://install-demo.netlify.app/">View here</a></p>
                 </div>
                 <div class="project-card">
                     <img class="project-image" src="src/images/Project3.png" alt="Project three image"/>
